correct the bouncing overflow

--- a/style.scss
+++ b/style.scss
@@ -126,6 +126,7 @@ h1::after, h2::after, p::after, span::after{
 
     width: 100%;
     max-width: 500px;
+    overflow: hidden;
 
     &__container{
         position: relative;
@@ -135,7 +136,9 @@ h1::after, h2::after, p::after, span::after{
     &__msg{
         opacity: 0;
         width: 100%;
-        padding: 32px 16px;
+        padding: 36px 16px 32px;
+        position: relative;
+        top: 12px;
         word-wrap: break-word;
 
         font-family: "Fraunces", serif;
@@ -149,7 +152,7 @@ h1::after, h2::after, p::after, span::after{
 
     &__img{
         position: absolute;
-        top: -12px;
+        top: 0;
         left: 0;
 
         width: 100%;
